# telegram_convert_bot

./: .env.example  .gitignore  README.md  config.py  convert.py  program.py  pyproject.toml  requirements.txt  tb_message_processor.py  tb_message_queue.py  telebot_api.py
service/: __main__.py  config.py  convert.py  tb_message_processor.py  tb_message_queue.py  telebot_api.py
