[tool.poetry]
name = "telegram-convert-bot"
version = "0.1.0"
description = ""
authors = ["alina1412 <alina1412>"]
readme = "README.md"
packages = [{include = "telegram_convert_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
httpx = "^0.23.0"
python-dotenv = "^0.21.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
black = "^22.10.0"
pylint = "^2.15.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
